💄 style: fix tg scrollbar color

--- a/apps/wallet/src/index.css
+++ b/apps/wallet/src/index.css
@@ -12,8 +12,7 @@ html, body, #root {
   @apply w-[2px] h-[4px] bg-transparent;
 }
 *::-webkit-scrollbar-thumb {
-  @apply rounded-full;
-  background-color: color-mix(in oklch, currentColor 35%, transparent) transparent;
+  @apply rounded-full bg-white/50;
 }
 
 @layer components {
